--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Brandon K. Williams - Design Engineer</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Brandon K. Williams - Design Engineer</title>
+    <meta name="description" content="Brandon Williams is an Engineer...">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
@@ -18,8 +18,8 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/brandonkwilliams.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
+</head>
+<body>
 
     <!-- Fixed Top Navigation -->
     <a class="sr-only" href="#content">Skip to main content</a>
@@ -44,9 +44,6 @@
                     </li>
                     <li>
                         <a href="#Work">WORK</a>
-                    </li>
-                    <li>
-                        <a href="#Resume">RESUME</a>
                     </li>
                     <li>
                         <a href="#Contact">CONTACT</a>
@@ -78,7 +75,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3 font-blue">
-                        <h1><span class="font-bold">Philosophy</span></h1>
+                        <h1>Philosophy</h1>
                          <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line">
@@ -98,7 +95,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3 font-blue">
-                        <h1><span class="font-bold">Process</span></h1>
+                        <h1>Process</h1>
                         <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line">
@@ -186,36 +183,90 @@
     </div>
 
     <!-- Work -->
-
-    <!-- Resume -->
-
-    <!-- Contact/Footer -->
-    <div class="outer-150">
-        <div class="inner-150">
+    <div class="outer-fit bg-white" id="Work">
+        <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12 text-center font-white">
-                        <h4>&copy Brandon Williams 2014</h4>
+                    <div class="col-md-6 col-md-offset-3 font-blue">
+                        <h1>Work</h1>
+                        <div class="outer-line-top">  
+                        </div>  
+                            <div class="inner-line">
+                            </div>
+                        <div class="outer-line-bottom">  
+                        </div> 
+                        <span class="font-gray"><h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3></span>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12 text-center">
-                        <h4>brandonwilliams.nu@gmail.com | 574-305-1468</h4>
-                    </div>
-                </div>
+                </div>  
             </div>
         </div>
     </div>
-        
 
-
-
-
-
-
-
-
-
+    <!-- Contact -->
+    <div class="outer-fit bg-gray" id="Contact">
+        <div class="inner-fit-contact philosophy-image top center">
+            <div class="container">
+                <div class="row padded-bottom">
+                    <div class="col-md-6 col-md-offset-3 font-blue">
+                        <h1>Contact</h1>
+                        <div class="outer-line-top">  
+                        </div>  
+                            <div class="inner-line-dark">
+                            </div>
+                        <div class="outer-line-bottom">  
+                        </div> 
+                        <span class="font-gray"><h3>I love what I do. If you love it too send me a note or give me a call. Feedback and questions are also much appreciated.</h3></span>
+                    </div>
+                </div>
+                <form id="contactForm" name="sentMessage" novalidate="">
+                    <div class="form-group">
+                        <div class="col-md-offset-3 col-md-6 col-sm-12">
+                            <input class="form-control" id="name" type="text" placeholder="Full Name" required="" data-validation-required-message="Please enter your name" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-3 col-md-6 col-sm-12">
+                            <input class="form-control" id="email" type="email" placeholder="Email" required="" data-validation-required-message="Please enter your email" />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-offset-3 col-md-6 col-sm-12">
+                            <textarea rows="10"class="form-control"
+                            placeholder="Message" id="message" required
+                            data-validation-required-message="Please enter your message" minlength="5" 
+                            data-validation-minlength-message="Min 5 characters" 
+                            maxlength="999" style="resize:none"></textarea>
+                        </div>
+                    </div>
+                    <div id="success"></div>
+                    <div class="form-group">
+                        <div class="col-sm-12">
+                            <button type="submit" name="submit" class="btn btn-new">Send</button>
+                        </div>
+                    </div>
+                </form>
+                <div class="outer-line-top">  
+                </div>  
+                    <div class="inner-line-dark">
+                    </div>
+                <div class="outer-line-bottom padded-bottom">
+                </div>
+                <div class="row">
+                    <div class="col-md-offset-4 col-md-4">
+                        <img class="img-circle" src="http://placehold.it/75x75">
+                        <img class="img-circle" src="http://placehold.it/75x75">
+                        <img class="img-circle" src="http://placehold.it/75x75">
+                        <img class="img-circle" src="http://placehold.it/75x75">
+                    </div>
+                </div>       
+            </div>
+            <div class="row bottom">
+                <div class="col-md-12 font-gray right">
+                    <p>&copy Brandon Williams 2014</p>
+                </div> 
+            </div>
+        </div>
+    </div>    
 
         <!-- Load JS here for greater good =============================-->
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -255,5 +306,11 @@
         });
         }).resize();
         </script>
+        <script src="js/jqBootstrapValidation.js"></script>
+        <script>
+        $(function () { $("input,select,textarea").not("[type=submit]").jqBootstrapValidation(); } );
+        </script>
+        <script src="js/contact_me.js"></script>
+        <script src="bin/contact_me.php"></script>
     </body>
 </html>
