--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href="#Philosophy">PHILOSOPHY</a>
                     </li>
                     <li>
-                        <a href="#Work">PROCESS</a>
+                        <a href="#Process">PROCESS</a>
                     </li>
                     <li>
                         <a href="#Work">WORK</a>
@@ -98,7 +98,7 @@
                         <h1>Process</h1>
                         <div class="outer-line-top">  
                         </div>  
-                            <div class="inner-line">
+                            <div class="inner-line-dark">
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
@@ -107,7 +107,7 @@
                 </div> 
                 <div class="row">
                     <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
-                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <img class="img-responsive" src="http://placehold.it/350x270">
                         <h2>Problem</h2>
                             <div class="outer-small-line-top">  
                             </div>  
@@ -119,7 +119,7 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
-                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <img class="img-responsive" src="http://placehold.it/350x270">
                         <h2>Research</h2>
                             <div class="outer-small-line-top">  
                             </div>  
@@ -131,7 +131,7 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
-                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <img class="img-responsive" src="http://placehold.it/350x270">
                         <h2>Ideation</h2>
                             <div class="outer-small-line-top">  
                             </div>  
@@ -143,7 +143,7 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
-                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <img class="img-responsive" src="http://placehold.it/350x270">
                         <h2>Prototyping</h2>
                             <div class="outer-small-line-top">  
                             </div>  
@@ -155,7 +155,7 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
-                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <img class="img-responsive" src="http://placehold.it/350x270">
                         <h2>Iteration</h2>
                             <div class="outer-small-line-top">  
                             </div>  
@@ -167,7 +167,7 @@
                     </div>
 
                     <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
-                        <img class="img-responsive" src="http://placehold.it/350x350">
+                        <img class="img-responsive" src="http://placehold.it/350x270">
                         <h2>Manufacturing</h2>
                             <div class="outer-small-line-top">  
                             </div>  
@@ -197,7 +197,22 @@
                         </div> 
                         <span class="font-gray"><h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3></span>
                     </div>
+                </div> 
+                <div class="row padded-top">
+                    <div class="col-md-12 work">
+                        <div class="work-image1"></div>
+                    </div>
+                </div>
+                <div class="row padded-top">
+                    <div class="col-md-12 work">
+                        <div class="work-image2"></div>
+                    </div>
                 </div>  
+                <div class="row padded-top">
+                    <div class="col-md-12 work">
+                        <div class="work-image3"></div>
+                    </div>
+                </div>           
             </div>
         </div>
     </div>
@@ -218,42 +233,31 @@
                         <span class="font-gray"><h3>I love what I do. If you love it too send me a note or give me a call. Feedback and questions are also much appreciated.</h3></span>
                     </div>
                 </div>
-                <form id="contactForm" name="sentMessage" novalidate="">
+                <!-- <form role="form">
                     <div class="form-group">
-                        <div class="col-md-offset-3 col-md-6 col-sm-12">
-                            <input class="form-control" id="name" type="text" placeholder="Full Name" required="" data-validation-required-message="Please enter your name" />
+                        <div class="col-md-12">
+                            <input class="form-control" id="name" type="text" placeholder="Full Name">
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-offset-3 col-md-6 col-sm-12">
-                            <input class="form-control" id="email" type="email" placeholder="Email" required="" data-validation-required-message="Please enter your email" />
+                        <div class="col-md-12">
+                            <input class="form-control" id="email" type="email" placeholder="Email">
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-offset-3 col-md-6 col-sm-12">
+                        <div class="col-md-12">
                             <textarea rows="10"class="form-control"
-                            placeholder="Message" id="message" required
-                            data-validation-required-message="Please enter your message" minlength="5" 
-                            data-validation-minlength-message="Min 5 characters" 
-                            maxlength="999" style="resize:none"></textarea>
+                            placeholder="Message" id="message"></textarea>
                         </div>
                     </div>
-                    <div id="success"></div>
                     <div class="form-group">
-                        <div class="col-sm-12">
+                        <div class="col-md-12">
                             <button type="submit" name="submit" class="btn btn-new">Send</button>
                         </div>
                     </div>
-                </form>
-                <div class="outer-line-top">  
-                </div>  
-                    <div class="inner-line-dark">
-                    </div>
-                <div class="outer-line-bottom padded-bottom">
-                </div>
+                </form> -->
                 <div class="row">
                     <div class="col-md-offset-4 col-md-4">
-                        <img class="img-circle" src="http://placehold.it/75x75">
                         <img class="img-circle" src="http://placehold.it/75x75">
                         <img class="img-circle" src="http://placehold.it/75x75">
                         <img class="img-circle" src="http://placehold.it/75x75">
@@ -306,11 +310,5 @@
         });
         }).resize();
         </script>
-        <script src="js/jqBootstrapValidation.js"></script>
-        <script>
-        $(function () { $("input,select,textarea").not("[type=submit]").jqBootstrapValidation(); } );
-        </script>
-        <script src="js/contact_me.js"></script>
-        <script src="bin/contact_me.php"></script>
     </body>
 </html>
