--- a/index.html
+++ b/index.html
@@ -199,17 +199,17 @@
                     </div>
                 </div> 
                 <div class="row padded-top">
-                    <div class="col-md-12 work">
+                    <div class="col-md-12">
                         <div class="work-image1"></div>
                     </div>
                 </div>
                 <div class="row padded-top">
-                    <div class="col-md-12 work">
+                    <div class="col-md-12">
                         <div class="work-image2"></div>
                     </div>
                 </div>  
                 <div class="row padded-top">
-                    <div class="col-md-12 work">
+                    <div class="col-md-12">
                         <div class="work-image3"></div>
                     </div>
                 </div>           
