--- a/index.html
+++ b/index.html
@@ -264,11 +264,13 @@
                     </div>
                 </div>       
             </div>
-            <div class="row bottom">
-                <div class="col-md-12 font-gray right">
-                    <p>&copy Brandon Williams 2014</p>
-                </div> 
-            </div>
+            <div class="container">    
+                <div class="row bottom">
+                    <div class="col-md-12 font-gray right">
+                        <p>&copy Brandon Williams 2014</p>
+                    </div> 
+                </div>
+            </div>    
         </div>
     </div>    
 
