--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="outer-line-bottom">  
                         </div> 
                         <span class="font-gray"><h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</h3></span>
-                    </div>
+                    </div>  
                 </div> 
                 <div class="row">
                     <div class="col-xs-12 col-sm-4 col-md-4 left font-gray">
@@ -199,18 +199,30 @@
                     </div>
                 </div> 
                 <div class="row padded-top">
-                    <div class="col-md-12">
-                        <div class="work-image1"></div>
-                    </div>
+                    <div class="col-md-12 text-right">
+                        <a href="loungechair.html"><div class="work-image1">
+                        </div></a>
+                        <input type="button" value="Lounge Chair | Northwestern University | 2013" class="btn btn-new" onclick="location.href='loungechair.html';">
+                        </div>
+                        <div class="pad-space">
+                    </div> 
                 </div>
                 <div class="row padded-top">
-                    <div class="col-md-12">
-                        <div class="work-image2"></div>
+                    <div class="col-md-12 text-right">
+                        <a href="shoes.html"><div class="work-image2">
+                        </div></a>
+                        <input type="button" value="Dress Shoe | Northwestern University | 2013" class="btn btn-new" onclick="location.href='shoes.html';">
+                        </div>
+                        <div class="pad-space">
                     </div>
                 </div>  
                 <div class="row padded-top">
-                    <div class="col-md-12">
-                        <div class="work-image3"></div>
+                    <div class="col-md-12 text-right">
+                        <a href="speaker.html"><div class="work-image3">
+                        </div></a>
+                        <input type="button" value="Bluetooth Speaker | Northwestern University | 2013" class="btn btn-new" onclick="location.href='speaker.html';">
+                        </div>
+                        <div class="pad-space">
                     </div>
                 </div>           
             </div>
