--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </div>
     
     <!-- Philosophy -->
-    <div class="outer-fit bg-white" id="Philosophy">
+    <div class="outer-fit bg-gray" id="Philosophy">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
@@ -90,7 +90,7 @@
     </div>
 
     <!-- Process -->
-    <div class="outer-fit bg-gray" id="Process">
+    <div class="outer-fit bg-white" id="Process">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
@@ -183,7 +183,7 @@
     </div>
 
     <!-- Work -->
-    <div class="outer-fit bg-white" id="Work">
+    <div class="outer-fit bg-gray" id="Work">
         <div class="inner-fit philosophy-image top center">
             <div class="container">
                 <div class="row">
@@ -202,7 +202,7 @@
                     <div class="col-md-12 text-right">
                         <a href="loungechair.html"><div class="work-image1">
                         </div></a>
-                        <input type="button" value="Lounge Chair | Northwestern University | 2013" class="btn btn-new" onclick="location.href='loungechair.html';">
+                        <input type="button" value="Lounge Chair | 2013" class="btn btn-new" onclick="location.href='loungechair.html';">
                         </div>
                         <div class="pad-space">
                     </div> 
@@ -211,7 +211,7 @@
                     <div class="col-md-12 text-right">
                         <a href="shoes.html"><div class="work-image2">
                         </div></a>
-                        <input type="button" value="Dress Shoe | Northwestern University | 2013" class="btn btn-new" onclick="location.href='shoes.html';">
+                        <input type="button" value="Dress Shoe | 2013" class="btn btn-new" onclick="location.href='shoes.html';">
                         </div>
                         <div class="pad-space">
                     </div>
@@ -220,7 +220,7 @@
                     <div class="col-md-12 text-right">
                         <a href="speaker.html"><div class="work-image3">
                         </div></a>
-                        <input type="button" value="Bluetooth Speaker | Northwestern University | 2013" class="btn btn-new" onclick="location.href='speaker.html';">
+                        <input type="button" value="Bluetooth Speaker | 2013" class="btn btn-new" onclick="location.href='speaker.html';">
                         </div>
                         <div class="pad-space">
                     </div>
@@ -230,11 +230,11 @@
     </div>
 
     <!-- Contact -->
-    <div class="outer-fit bg-gray" id="Contact">
+    <div class="outer-fit bg-blue" id="Contact">
         <div class="inner-fit-contact philosophy-image top center">
             <div class="container">
                 <div class="row padded-bottom">
-                    <div class="col-md-6 col-md-offset-3 font-blue">
+                    <div class="col-md-6 col-md-offset-3 font-white">
                         <h1>Contact</h1>
                         <div class="outer-line-top">  
                         </div>  
@@ -242,7 +242,7 @@
                             </div>
                         <div class="outer-line-bottom">  
                         </div> 
-                        <span class="font-gray"><h3>I love what I do. If you love it too send me a note or give me a call. Feedback and questions are also much appreciated.</h3></span>
+                        <span class="font-white"><h3>I love what I do. If you love it too send me a note or give me a call. Feedback and questions are also much appreciated.</h3></span>
                     </div>
                 </div>
                 <!-- <form role="form">
