--- a/guitarcase.html
+++ b/guitarcase.html
@@ -32,12 +32,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="index.html" class="navbar-brand">Brandon Williams</a>
+                <a href="#" class="navbar-brand">Brandon Williams</a>
             </div>
             <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
                 <ul class="nav navbar-nav navbar-right" id="topnav">
                     <li>
-                        <a href="index.html#Philosophy">PHILOSOPHY</a>
+                        <a href="#Philosophy">PHILOSOPHY</a>
                     </li>
                     <li>
                         <a href="#Process">PROCESS</a>
