--- a/shoes.html
+++ b/shoes.html
@@ -62,7 +62,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 col-md-offset-3 font-white">
-                        <h1>Lounge Chair | 2013</h1>
+                        <h1>Dress Shoe | 2013</h1>
                          <div class="outer-line-top">  
                         </div>  
                             <div class="inner-line-dark">
@@ -142,9 +142,9 @@
                 </div>
                 <div class="row padded-top">
                     <div class="col-md-12 text-right">
-                        <a href="shoes.html"><div class="work-image2">
+                        <a href="loungechair.html"><div class="work-image2">
                         </div></a>
-                        <input type="button" value="Dress Shoe | 2013" class="btn btn-new" onclick="location.href='shoes.html';">
+                        <input type="button" value="Lounge Chair | 2013" class="btn btn-new" onclick="location.href='loungechair.html';">
                         </div>
                         <div class="pad-space">
                     </div>
